<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_movies"
            android:checked="false"
            android:title="Movies1"/>

        <item
            android:id="@+id/menu_tv"
            android:checked="false"
            android:title="Tv"/>
    </group>


</menu>