<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Watchlister"
        android:textSize="20dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/username"
         />


</RelativeLayout>
